--- a/_posts/2014-09-08-fellows.md
+++ b/_posts/2014-09-08-fellows.md
@@ -18,7 +18,7 @@ As the fall term begins, we are delighted to welcome our 9 (!) SLab Fellows. Ran
 
 We are excited about the opportunity to work closely with our [Graduate Fellows in the Digital Humanities](/graduate-fellowships/), James, Jenny, and Emily as they develop their projects. **Please join us at their [welcome lunch and panel September 12th, at 12 PM ](http://scholarslab.org/events/2014-15-scholars-lab-graduate-fellows-panel/)in the Scholars' Lab Commons.**
 
-As a [previous post](announcements/welcoming-our-new-scholars-lab-fellows/) noted, James, Jennifer, and Emily’s projects converge around questions of social networks and mapping.
+As a [previous post](/announcements/digital humanities/grad student research/welcoming-our-new-scholars-lab-fellows/) noted, James, Jennifer, and Emily’s projects converge around questions of social networks and mapping.
 
 [James Ambuske’s](/people/james-ambuske/) (History) dissertation is titled “Scotland’s American Revolution: Emigration and Imperial Crisis, 1763-1803.”
 
@@ -34,25 +34,25 @@ Marking our 4th year of the [Praxis Program](/graduate-fellowships/), we warmly 
 
 
 
-	
+
   * [Amy Boyd](/people/amy-boyd/) (English)
 
-	
+
   * [Swati Chawla](/people/swati-chawla/) (History)
 
-	
+
   * [Andrew Ferguson](/people/andrew-ferguson/) (English)
 
-	
+
   * [Joris Gjata](/people/joris-gjata/) (Sociology)
 
-	
+
   * [Jennifer Grayburn](/people/jennifer-grayburn/) (Art and Architecture)
 
-	
+
   * and [Steven Lewis](/people/steven-lewis/) (Music)
 
 
 Past Praxis teams developed [Prism](http://prism.scholarslab.org/), a web application for crowd-based interpretations of texts, and re-imagined [Ivanhoe](http://ivanhoe.scholarslab.org), a platform for playfully (and collaboratively) interpreting texts and artifacts.
 
-This year’s cohort will refine Ivanhoe as well as explore our new [Makerspace](/makerspace/). With a talented and disciplinarily diverse team, we are looking forward to their dive into Ivanhoe. Keep track of their experiments on our [blog](/archives/)!
+This year’s cohort will refine Ivanhoe as well as explore our new Makerspace. With a talented and disciplinarily diverse team, we are looking forward to their dive into Ivanhoe. Keep track of their experiments on our [blog](/blog/)!
