rakefile and newly formatted permalinks for posts

--- a/_posts/2014-09-08-fellows.md
+++ b/_posts/2014-09-08-fellows.md
@@ -18,7 +18,7 @@ As the fall term begins, we are delighted to welcome our 9 (!) SLab Fellows. Ran
 
 We are excited about the opportunity to work closely with our [Graduate Fellows in the Digital Humanities](/graduate-fellowships/), James, Jenny, and Emily as they develop their projects. **Please join us at their [welcome lunch and panel September 12th, at 12 PM ](http://scholarslab.org/events/2014-15-scholars-lab-graduate-fellows-panel/)in the Scholars' Lab Commons.**
 
-As a [previous post](/announcements/digital humanities/grad student research/welcoming-our-new-scholars-lab-fellows/) noted, James, Jennifer, and Emily’s projects converge around questions of social networks and mapping.
+As a [previous post](/2014/05/19/welcoming-our-new-scholars-lab-fellows/) noted, James, Jennifer, and Emily’s projects converge around questions of social networks and mapping.
 
 [James Ambuske’s](/people/james-ambuske/) (History) dissertation is titled “Scotland’s American Revolution: Emigration and Imperial Crisis, 1763-1803.”
 
