--- a/_posts/2014-09-08-fellows.md
+++ b/_posts/2014-09-08-fellows.md
@@ -10,13 +10,13 @@ categories:
 - Grad Student Research
 ---
 
-As the fall term begins, we are delighted to welcome our 9 (!) SLab Fellows. Ranging across 5 disciplines from the [arts, humanities, and social sciences](http://as.virginia.edu/). Our [Graduate Fellows in the Digital Humanities](/graduate-fellowships) and [Praxis Program Fellows](http://praxis.scholarslab.org) join a distinguished community of [past fellows](/people/).
+As the fall term begins, we are delighted to welcome our 9 (!) SLab Fellows. Ranging across 5 disciplines from the [arts, humanities, and social sciences](http://as.virginia.edu/). Our [Graduate Fellows in the Digital Humanities](/student-opportunities) and [Praxis Program Fellows](http://praxis.scholarslab.org) join a distinguished community of [past fellows](/people/).
 
 
 ## Graduate Fellows in the Digital Humanities
 
 
-We are excited about the opportunity to work closely with our [Graduate Fellows in the Digital Humanities](/graduate-fellowships), James, Jenny, and Emily as they develop their projects. **Please join us at their [welcome lunch and panel September 12th, at 12 PM ](http://scholarslab.org/events/2014-15-scholars-lab-graduate-fellows-panel/)in the Scholars' Lab Commons.**
+We are excited about the opportunity to work closely with our [Graduate Fellows in the Digital Humanities](/student-opportunities), James, Jenny, and Emily as they develop their projects. **Please join us at their [welcome lunch and panel September 12th, at 12 PM ](http://scholarslab.org/events/2014-15-scholars-lab-graduate-fellows-panel/)in the Scholars' Lab Commons.**
 
 As a [previous post](/2014/05/19/welcoming-our-new-scholars-lab-fellows/) noted, James, Jennifer, and Emily’s projects converge around questions of social networks and mapping.
 
@@ -30,7 +30,7 @@ As a [previous post](/2014/05/19/welcoming-our-new-scholars-lab-fellows/) noted,
 ## Praxis Program Fellows
 
 
-Marking our 4th year of the [Praxis Program](/graduate-fellowships), we warmly welcome:
+Marking our 4th year of the [Praxis Program](/student-opportunities), we warmly welcome:
 
 
 
