References assets on static.scholarslab.org.
Inclues a bunch of references I missed in 0db1617f.

--- a/collections/_posts/2016-07-22-robocamp-2016.md
+++ b/collections/_posts/2016-07-22-robocamp-2016.md
@@ -13,7 +13,7 @@ tags:
 
 I had the pleasure of spending a week with the folks in the Architecture School learning and playing with their Kuka robot (named Karl, [http://www.robotsinarchitecture.org/](http://www.robotsinarchitecture.org/)). This was the first run of a hopefully recurring camp to introduce faculty and staff to the robot arm in the Fab-lab in the A-school. Most of the participants were A-school faculty, but there was also me from the Library, someone from the Music school's Maker space, and someone from the Bio-engineering school (they just purchased a Kuka KL 3000, a much bigger bot).
 
-![IMG_20160722_140917](http://scholarslab.org/wp-content/uploads/2016/07/IMG_20160722_140917-949x1024.jpg)
+![IMG_20160722_140917](http://static.scholarslab.org/wp-content/uploads/2016/07/IMG_20160722_140917-949x1024.jpg)
 
 Over four days we learned how to make the robot do marvelous and wonderful tricks.
 
@@ -37,11 +37,11 @@ This day we used the robot to cut a foam block with a hot wire. We drew a line i
 
 This produced four long pieces that could be rotated to form a column with a unique profile on each side.
 
-![IMG_20160720_154748](http://scholarslab.org/wp-content/uploads/2016/07/IMG_20160720_154748-758x1024.jpg)
+![IMG_20160720_154748](http://static.scholarslab.org/wp-content/uploads/2016/07/IMG_20160720_154748-758x1024.jpg)
 
 I wrote my name with the line, which produced this:
 
-![IMG_20160720_154713](http://scholarslab.org/wp-content/uploads/2016/07/IMG_20160720_154713-1024x758.jpg)
+![IMG_20160720_154713](http://static.scholarslab.org/wp-content/uploads/2016/07/IMG_20160720_154713-1024x758.jpg)
 
 The focus of this day was to help us think spatially. We could add twists to the curves which led to columns that were hard to mentally visualize how they would turn out. Here is a sample of the columns our group generated:
 
