Should be final test.

--- a/collections/_posts/2014-01-30-test.md
+++ b/collections/_posts/2014-01-30-test.md
@@ -15,3 +15,4 @@ Test post to see if auto building of site is working
 
 installed jekyll and now hopefully it works.
 
+and installed bundles and such and it should work now...
