Fixed lib.virginia.edu links...
to library.virginia.edu. Also caught some lib.virginia.edu/scholarslab
links (must have been former URL before SLab.org?)

--- a/collections/_posts/2011-01-24-2011-12-grad-fellows.md
+++ b/collections/_posts/2011-01-24-2011-12-grad-fellows.md
@@ -15,8 +15,8 @@ The Scholars’ Lab is proud to host, for the fourth year, a prestigious UVa Lib
 
 This fellowship is designed to support advanced graduate students doing significant and innovative work in DH by making resources and expertise available in all areas of digital humanities research -- from content creation and data management, to advice on intellectual property issues. Funding for the Fellowship program was established by the Jeffrey C. Walker Library Fund for Technology in the Humanities, the Matthew & Nancy Walker Library Fund, and a challenge grant from the National Endowment for the Humanities.
 
-Among other projects, past Scholars' Lab fellows have used Ruby on Rails and MySQL to create a database of the Early American foreign service, GIS tools to explore geospatial patterns of pipe development in Native American settlements, computational linguistic techniques to evaluate the authorship of a Victorian novel and to explore patterns in early Biblical apocalyptic literature, and have used web APIs for social networking sites to explore Asian-American indie rock culture. More information about our Fellows can be found on the [community page](http://www2.lib.virginia.edu/scholarslab/about/people.html) at the Scholars' Lab website.
+Among other projects, past Scholars' Lab fellows have used Ruby on Rails and MySQL to create a database of the Early American foreign service, GIS tools to explore geospatial patterns of pipe development in Native American settlements, computational linguistic techniques to evaluate the authorship of a Victorian novel and to explore patterns in early Biblical apocalyptic literature, and have used web APIs for social networking sites to explore Asian-American indie rock culture. More information about our Fellows can be found on the [community page](http://www2.scholarslab.org/about/people.html) at the Scholars' Lab website.
 
-Application information and instructions for the fellowship program are available from [the Scholars' Lab website](http://www2.lib.virginia.edu/scholarslab/about/fellowship.html).
+Application information and instructions for the fellowship program are available from [the Scholars' Lab website](http://www2.scholarslab.org/about/fellowship.html).
 
 Application packets are due no later than March 1, 2011.
