Cleaning things up

--- a/collections/_posts/2015-09-23-time-and-praxis-2015-2016.md
+++ b/collections/_posts/2015-09-23-time-and-praxis-2015-2016.md
@@ -10,6 +10,7 @@ categories:
 tags:
 - praxis program
 - time
+- ClockWork
 ---
 
 Time is a massive concept. If you were asked to think about it – how it works, feels, changes, what it looks like, how people go about talking about it, or representing it – where would you start?
