Lots of blockquote syntax

--- a/collections/_posts/2010-05-11-why-ruby.md
+++ b/collections/_posts/2010-05-11-why-ruby.md
@@ -243,7 +243,7 @@ While Twitter shows that Rails is capable of scaling (with lots of work), quite 
 The Ruby language is included in most (if not all) modern Linux package systems and makes installation a snap. The other "major" piece of software you'll need is RubyGems (a package manager for Ruby libraries), which is also generally available as a managed package.
 
 
-<blockquote>**Note**: There is a major change occurring with the development of Rails 3. Rails is moving from a system of system-wide gems to application-level gems with the introduction of [GemBundler](http://gembundler.com/). This approach is a more stable method of deploying application requirements which not only allows you to ensure that application libraries are properly resolved, but also provide better granular control over which libraries are deployed in specific contexts.</blockquote>
+> **Note**: There is a major change occurring with the development of Rails 3. Rails is moving from a system of system-wide gems to application-level gems with the introduction of [GemBundler](http://gembundler.com/). This approach is a more stable method of deploying application requirements which not only allows you to ensure that application libraries are properly resolved, but also provide better granular control over which libraries are deployed in specific contexts.
 
 
 There was a time where deploying Rails applications was a real bear. Then along came [Phusion Passenger](http://www.modrails.com/) (aka mod_rails). This allows you to run Rails (actually any Rack-based application) through Apache and Nginx without any other port management, service process monitoring, file cleanup, etc. As long as Apache is running, so is your Rails app!
