--- a/collections/_posts/2012-02-28-hwaet.md
+++ b/collections/_posts/2012-02-28-hwaet.md
@@ -15,29 +15,29 @@ tags:
 Researchers here at the Scholars' Lab recently unearthed a manuscript fragment, dating roughly to the 9th or 10 centuries CE, which we here publish for you in rough translation.  It seems to address preparation for some sort of epic conflict.
 
 
-<blockquote>Lo! By the bright-shining beach at Alderman-sea
-A clarion-call crested the coursing ocean-horses
-From Beþienni, duty-drover, DH-thane,
-To defeat the doughty foe, the Day-table,
-Age-breaker, stress-maker, old-conductor.
-Constant companions cry-heeded and came,
-Troop-leaders the two, trusted and able,
-Gold-bearded and glass-eyed, girded and battle-wise.
-First the sunset-settled, steel-structured
-Waenbatte, code-conqueror and calculator-kin.
-His double, dawn-dweller Aeric,
-Blue-eyed bridge-builder and feeling-hugger,
-Schedule-sack on his shoulders not over-full
-With kinder-kith of the calendar-foe:
-A mead-room of the mind, moving-chaired and floating-floored,
-A learning-place for library-kind.
-Also a seeker-space to supply apt answers
-To aid the askers of helping-queries.
-Also the thinking-plan of the tinker-space,
-Growing to a gregarious maker-hall
-Subject of singers’ songs and far-flung fame.
-Also signal fires for SLab-friends,
-Taken with our teaching-times . . .</blockquote>
+> Lo! By the bright-shining beach at Alderman-sea<br>
+A clarion-call crested the coursing ocean-horses<br>
+From Beþienni, duty-drover, DH-thane,<br>
+To defeat the doughty foe, the Day-table,<br>
+Age-breaker, stress-maker, old-conductor.<br>
+Constant companions cry-heeded and came,<br>
+Troop-leaders the two, trusted and able,<br>
+Gold-bearded and glass-eyed, girded and battle-wise.<br>
+First the sunset-settled, steel-structured<br>
+Waenbatte, code-conqueror and calculator-kin.<br>
+His double, dawn-dweller Aeric,<br>
+Blue-eyed bridge-builder and feeling-hugger,<br>
+Schedule-sack on his shoulders not over-full<br>
+With kinder-kith of the calendar-foe:<br>
+A mead-room of the mind, moving-chaired and floating-floored,<br><br>
+A learning-place for library-kind.<br>
+Also a seeker-space to supply apt answers<br>
+To aid the askers of helping-queries.<br>
+Also the thinking-plan of the tinker-space,<br>
+Growing to a gregarious maker-hall<br>
+Subject of singers’ songs and far-flung fame.<br>
+Also signal fires for SLab-friends,<br>
+Taken with our teaching-times . . .
 
 
 And here the fragment ends.  But we continue to comb the shelves of SLab Special Collections to see if other pieces of the manuscript might yet be found.
