Adds documentation reference for plugin upgrade.

--- a/collections/_posts/2019-06-04-neatline-2.6.2-release.md
+++ b/collections/_posts/2019-06-04-neatline-2.6.2-release.md
@@ -6,6 +6,6 @@ title: Neatline 2.6.2 Release
 slug: neatline-2.6.2-release
 ---
 
-Neatline 2.6.2 is a security release for all previous versions of Neatline for Omeka Classic, and we strongly encourage you to update to this version immediately. [Download Neatline 2.6.2](https://omeka.org/classic/plugins/Neatline/) from the Omeka Classic addons page.
+Neatline 2.6.2 is a security release for all previous versions of Neatline for Omeka Classic, and we strongly encourage you to update to this version immediately. [Download Neatline 2.6.2](https://omeka.org/classic/plugins/Neatline/) from the Omeka Classic addons page and check out the [documentation for upgrading plugins](https://omeka.org/classic/docs/Admin/Adding_and_Managing_Plugins/#upgrading-plugins) to complete your upgrade.
 
 This release addresses a SQL injection vulnerability in the records view. Many thanks to Andrew Angelopoulos and Mathew Tams of Fordham University for reporting the issue.
