Going through old posts piece by piece

--- a/collections/_posts/2009-03-11-50.md
+++ b/collections/_posts/2009-03-11-50.md
@@ -9,6 +9,8 @@ categories:
 - Visualization and Data Mining
 ---
 
+*Note: This post contains references to images stored on an internal server that has seen been taken offline. So the images described are no longer accessible. We apologize for the inconvenience.*
+
 So for the thousandth (or so it seems) time I’ve gotten into this discussion with my friends from the East Coast and Midwest (I’m from Texas) about the correct way to refer to a sweet carbonated beverage, and I have finally got to thinking about ways to map locally spoken slang and jargon using GIS.  Starting a database of ‘events’ where a person uses unique language in reference to a common-place item or occurrence (I have a friend from Wisconsin who calls the drinking fountain a “bubbler”) would be an insightful way to examine how jargon or slang starts and spreads geographically.
 
 So I decided to indulge my curiosity and create a small database consisting of the answers to two quick survey questions; What do you call sweet carbonated beverages?, and what state do you identify yourself as being “from”?.  I solicited friends and colleagues for the answers to these questions and ended up with about 150 useable responses (if you were one of the people who responded with “beer”, I thank you for the interest in the survey, but your answer was not included).  I chose to ask this question (please bear in mind that linguistics is not a focus of my studies) because regardless what you refer to it as, most people have had experience with a coke/soda/soda-pop/pop, which isn’t true for all objects of regional jargon (example: before moving to the East Coast I had never seen nor heard of scrapple) and I wanted to document the geographical extent and overlap of a single object rather than attempt to compare multiple similar objects with this first foray.
