--- a/collections/_posts/2012-09-21-failure.md
+++ b/collections/_posts/2012-09-21-failure.md
@@ -12,7 +12,7 @@ tags:
 - praxis program
 ---
 
-In middle school I built a website about the seven wonders of the ancient world. Nothing fancy – just images and some links – and I never published it. Building a personal website over the past few days as per Jeremy’s request feels a bit like coming full circle. My HTML skills remain prepubescent at best, and my barebones site keeps the spirit of GeoCities in the early 1990’s alive and well. Check it out. [http://bmw9t.github.com](http://bmw9t.github.com).
+In middle school I built a website about the seven wonders of the ancient world. Nothing fancy – just images and some links – and I never published it. Building a personal website over the past few days as per Jeremy’s request feels a bit like coming full circle. My HTML skills remain prepubescent at best, and my barebones site keeps the spirit of GeoCities in the early 1990’s alive and well. Check it out. [http://walshbr.com/old-site/](http://walshbr.com/old-site/).
 
 I admit to some hesitation in posting this fledgling site for all to see: so much more could be done to bring it into the twenty-first century. But I keep coming back to Bethany’s encouragement last week to fail in public, advice with which I am in love. My graduate training thus far has emphasized polish and perfection, for clear and obvious reasons. But even at this early stage, my work with Praxis feels more electric knowing that mistakes are welcome and that failure is viewed as a space of experimentation and elaboration rather than embarrassment.
 
