--- a/collections/_posts/2013-02-18-svg-to-wkt.md
+++ b/collections/_posts/2013-02-18-svg-to-wkt.md
@@ -11,9 +11,10 @@ tags:
 - neatline
 - svg
 - wkt
+crosspost:
+  - title: dclure.org
+    url: http://dclure.org/logs/svg-to-wkt/
 ---
-
-_[Cross-posted with [dclure.org](http://dclure.org/logs/svg-to-wkt/)]_
 
 Last week, I [wrote about](http://www.scholarslab.org/dh-developer/neatline-drawing-svg-on-maps/) the some of the new functionality in Neatline that makes it possible to take SVG documents created in vector-editing programs like Adobe Illustrator and drag them out as spatial geometry on the map. Under the hood, this involves converting the raw SVG markup - which encodes geometry relative to a "document" space (think of pixels in a Photoshop file) - into latitude/longitude coordinates that can be rendered dynamically on the map. Specifically, I needed to generate [Well-Known Text](http://en.wikipedia.org/wiki/Well-known_text) (WKT), the serialization format used by spatially-enabled relational databases like PostGIS and MySQL.
 
@@ -87,6 +88,3 @@ If you look at the output strings, you'll notice that the Y-axis coordinates in 
 
 
   * Get rid of the Underscore.js dependency.
-
-
-
