--- a/collections/_posts/2019-09-09-360-video-intro.md
+++ b/collections/_posts/2019-09-09-360-video-intro.md
@@ -52,6 +52,18 @@ Stitching plays a significant role in 360° video production. This is the step d
 
 When the video files from two lenses that capture the same viewpoint are stitched together, the connecting area is called the stitch line. These stitch lines create a distortion issue that creators must deal with.   
 
+## References and Resources 
+  1. [*Stitch Lines*](https://www.coursera.org/lecture/360-vr-video-production/stitch-lines-5vupR)
+  2. [*3-DoF vs 6-DoF*](https://www.coursera.org/lecture/360-vr-video-production/3-dof-vs-6-dof-zVm8B)
+  3. [*Mono vs. Stereo*](https://www.coursera.org/lecture/360-vr-video-production/mono-vs-stereo-Tw4FO)
+  4. [*Stereoscopic vs. Monoscopic 360° Video for VR experiences*](https://blog.vrdirect.com/stereo-vs-mono-360-video-for-vr)
+  5. [*10 things I wish I knew before shooting 360 video*](https://www.cnet.com/how-to/360-cameras-comparison-video-things-to-know-before-you-buy/)
+  6. [*Stitching 360° Video*](https://studio.knightlab.com/results/storytelling-layers-on-360-video/stitching-360-video/)
 
+## Videos Gif Sources
+  1. [*Stephen Colbert's 360 Tour of The Late Show*](https://www.youtube.com/watch?time_continue=34&v=RaD_0g0BFDA)
+  2. [*Best VR 360 Video*](https://www.youtube.com/watch?time_continue=80&v=QKm-SOOMC4c)
+  3. [*360 video, Jellyfish Bay, Raja Ampat, Indonesia, 8K underwater video*](https://www.youtube.com/watch?v=WL_7UTFnL5E)
+  4. [*GOES-S Atlas V Launch in 360*](https://www.youtube.com/watch?v=FfLIVGxNhxY)
 
 
