add label and title for pictures

--- a/collections/_posts/2019-09-09-360-video-intro.md
+++ b/collections/_posts/2019-09-09-360-video-intro.md
@@ -35,12 +35,21 @@ Unlike in immersive VR, the audience’s interaction with scenes or characters i
 The biggest attraction of 360° video is rotation, but this creates an obstacle for video creators. It’s unreasonable to expect audiences to look in the correct direction at just the right time so that the stories they are viewing can be told fully and be understood just as the creators intended. That being said, creators can still have some control over their audiences’ viewing behaviors. Putting text or other graphical elements in scenes to direct audiences, having a host to guide audiences, or playing audio to attract the audiences’ attention are great ways to help creators achieve this goal. Sometimes, it may even be helpful to have the camera move forward, which will force the audience to follow along.  
 
    <p align="center">
-      <img src="/assets/post-media/2019-09-09-360-video-intro/Host.gif" width="480" height="270">
+      <img src="/assets/post-media/2019-09-09-360-video-intro/Host.gif" title="360° video with Host" width="480" height="270">
       
+   </p>
+  
+   <p align="center">
+      Figure 2: 360° video with Host
+    </p>
+   
+    
+   <p align="center">
+      <img src="/assets/post-media/2019-09-09-360-video-intro/Room.gif" title="360° video with Moving Camera" width="480" height="270">
    </p>
     
    <p align="center">
-      <img src="/assets/post-media/2019-09-09-360-video-intro/Room.gif" width="480" height="270">
+      Figure 3: 360° video with Moving Camera
     </p>
 
 ## Multiple cameras cause image distortion problems
@@ -48,23 +57,40 @@ The biggest attraction of 360° video is rotation, but this creates an obstacle 
 Making a great 360° video relies on the creator’s ability to tell a story, and the most important question every creator should ask themselves when they start crafting their story is what type of camera they should use. Monoscopic cameras are the most commonly used cameras in 360° video shooting; they’re affordable and require less post-production work. They provide one lens for each viewpoint. Stereoscopic cameras, on the other hand, use two lenses instead of one to provide a more in-depth VR experience.   
 
   <p align="center">
-      <img src="/assets/post-media/2019-09-09-360-video-intro/Monoscopic.png" width="346" height="346">
+      <img src="/assets/post-media/2019-09-09-360-video-intro/Monoscopic.png" title="Monoscopic Camera" width="346" height="346">
       
   </p>
+  
+  <p align="center">
+      Figure 4: Monoscopic camera (Ricoh Theta M15)
+    </p>
     
    <p align="center">
-      <img src="/assets/post-media/2019-09-09-360-video-intro/Stereoscopic.png" width="346" height="346">
+      <img src="/assets/post-media/2019-09-09-360-video-intro/Stereoscopic.png" title="Stereoscopic Camera" width="346" height="346">
     </p>
+  
+  <p align="center">
+      Figure 5: Stereoscopic camera (Z CAM K1 Pro Cinematic VR180) 
+    </p>
+   
 
 Stitching plays a significant role in 360° video production. This is the step during which all video files captured by the cameras’ lenses are combined and edited so that they can be viewed as a 3D space, providing audiences with the feeling of reality. Some cameras do stitching in real time, whereas others record videos that require post-production work using stitching software. Generally speaking, 360° videos captured by a stereoscopic camera require heavier stitching work than those captured by a monoscopic camera. 
 
   <p align="center">
-      <img src="/assets/post-media/2019-09-09-360-video-intro/Jellyfish.gif" width="480" height="270">
+      <img src="/assets/post-media/2019-09-09-360-video-intro/Jellyfish.gif" title="Stitch Line Example" width="480" height="270">
+    </p>
+    
+   <p align="center">
+      Figure 6: Jellyfish 
     </p>
 
    <p align="center">
-      <img src="/assets/post-media/2019-09-09-360-video-intro/Launch.gif" width="480" height="270">
+      <img src="/assets/post-media/2019-09-09-360-video-intro/Launch.gif" title="Stitch Line Example" width="480" height="270">
     </p>
+    
+   <p align="center">
+      Figure 7: Atlas V Launch 
+   </p>
 
 When the video files from two lenses that capture the same viewpoint are stitched together, the connecting area is called the stitch line. These stitch lines create a distortion issue that creators must deal with.   
 
