--- a/collections/_posts/2019-09-09-360-video-intro.md
+++ b/collections/_posts/2019-09-09-360-video-intro.md
@@ -19,6 +19,7 @@ Although VR headsets are increasingly accessible these days, the number of peopl
 
 Although 360° video is a form of VR, it does not provide a fully immersive experience to its audience. Like regular videos, the camera’s location is the audience’s position. When the camera is still, the audience is set within the 3D space and therefore unable to modify his or her current location. However, the audience does have three rotations: yaw, pitch, and roll. A graph of the rotations is shown below. 
 
+
    <p align="center">
       <img src="/assets/post-media/2019-09-09-360-video-intro/Rotation.png" title="Ratation: yaw, pitch, and roll" width="386" height="284">
      
@@ -27,12 +28,15 @@ Although 360° video is a form of VR, it does not provide a fully immersive expe
       Figure 1: Yaw, Pitch and Roll 
     </p>
    
+   
 
 Unlike in immersive VR, the audience’s interaction with scenes or characters is very limited or even nonexistent. Audiences can turn their heads to observe their surroundings, but this won’t change how stories will progress. 
 
 ## Guiding the audience through a story  
 
-The biggest attraction of 360° video is rotation, but this creates an obstacle for video creators. It’s unreasonable to expect audiences to look in the correct direction at just the right time so that the stories they are viewing can be told fully and be understood just as the creators intended. That being said, creators can still have some control over their audiences’ viewing behaviors. Putting text or other graphical elements in scenes to direct audiences, having a host to guide audiences, or playing audio to attract the audiences’ attention are great ways to help creators achieve this goal. Sometimes, it may even be helpful to have the camera move forward, which will force the audience to follow along.  
+The biggest attraction of 360° video is rotation, but this creates an obstacle for video creators. It’s unreasonable to expect audiences to look in the correct direction at just the right time so that the stories they are viewing can be told fully and be understood just as the creators intended. 
+
+That being said, creators can still have some control over their audiences’ viewing behaviors. Putting text or other graphical elements in scenes to direct audiences, having a host to guide audiences, or playing audio to attract the audiences’ attention are great ways to help creators achieve this goal. Sometimes, it may even be helpful to have the camera move forward, which will force the audience to follow along.  
 
    <p align="center">
       <img src="/assets/post-media/2019-09-09-360-video-intro/Host.gif" title="360° video with Host" width="480" height="270">
@@ -54,7 +58,9 @@ The biggest attraction of 360° video is rotation, but this creates an obstacle 
 
 ## Multiple cameras cause image distortion problems
 
-Making a great 360° video relies on the creator’s ability to tell a story, and the most important question every creator should ask themselves when they start crafting their story is what type of camera they should use. Monoscopic cameras are the most commonly used cameras in 360° video shooting; they’re affordable and require less post-production work. They provide one lens for each viewpoint. Stereoscopic cameras, on the other hand, use two lenses instead of one to provide a more in-depth VR experience.   
+Making a great 360° video relies on the creator’s ability to tell a story, and the most important question every creator should ask themselves when they start crafting their story is what type of camera they should use. 
+
+Monoscopic cameras are the most commonly used cameras in 360° video shooting; they’re affordable and require less post-production work. They provide one lens for each viewpoint. Stereoscopic cameras, on the other hand, use two lenses instead of one to provide a more in-depth VR experience.   
 
   <p align="center">
       <img src="/assets/post-media/2019-09-09-360-video-intro/Monoscopic.png" title="Monoscopic Camera" width="346" height="346">
@@ -74,7 +80,9 @@ Making a great 360° video relies on the creator’s ability to tell a story, an
     </p>
    
 
-Stitching plays a significant role in 360° video production. This is the step during which all video files captured by the cameras’ lenses are combined and edited so that they can be viewed as a 3D space, providing audiences with the feeling of reality. Some cameras do stitching in real time, whereas others record videos that require post-production work using stitching software. Generally speaking, 360° videos captured by a stereoscopic camera require heavier stitching work than those captured by a monoscopic camera. 
+Stitching plays a significant role in 360° video production. This is the step during which all video files captured by the cameras’ lenses are combined and edited so that they can be viewed as a 3D space, providing audiences with the feeling of reality. Some cameras do stitching in real time, whereas others record videos that require post-production work using stitching software. Generally speaking, 360° videos captured by a stereoscopic camera require heavier stitching work than those captured by a monoscopic camera.
+
+When the video files from two lenses that capture the same viewpoint are stitched together, the connecting area is called the stitch line. These stitch lines create a distortion issue that creators must deal with.   
 
   <p align="center">
       <img src="/assets/post-media/2019-09-09-360-video-intro/Jellyfish.gif" title="Stitch Line Example" width="480" height="270">
@@ -91,8 +99,6 @@ Stitching plays a significant role in 360° video production. This is the step d
    <p align="center">
       Figure 7: Atlas V Launch 
    </p>
-
-When the video files from two lenses that capture the same viewpoint are stitched together, the connecting area is called the stitch line. These stitch lines create a distortion issue that creators must deal with.   
 
 ## References and Resources 
   1. [*Stitch Lines*](https://www.coursera.org/lecture/360-vr-video-production/stitch-lines-5vupR)
