updates text and link

--- a/collections/_posts/2019-09-09-360-video-intro.md
+++ b/collections/_posts/2019-09-09-360-video-intro.md
@@ -11,13 +11,13 @@ tags:
 - Parents Fund 
 ---
 
-Although VR headsets are increasingly accessible these days, the number of people who own them is far less than the number of those who own smartphones or computers. Fortunately, with 360° videos, it's not necessary to have a headset to explore VR. People can watch 360° videos using their smartphones or laptops—just like they normally do with regular videos—except now they can change their viewing angles using the keyboard, their fingers, or even by simply moving their device. 
+Although VR headsets are increasingly accessible these days, the number of people who own them is far less than the number of those who own smartphones or computers. Fortunately, with 360° videos, it's not necessary to have a headset to explore VR. People can watch 360° videos using their smartphones or laptops—just like they normally do with regular videos—except now they can change their viewing angles using the keyboard, their fingers, or even by simply moving their devices. 
 
 360° videos are different from regular videos in many ways; they bring a new experience to the audience and new challenges to the creators. Some of the unique features and challenges of 360° videos are outlined below.    
 
-## Fixed position, three-way rotation, and no interaction 
+## Fixed position, Three-way rotation, and No Interaction 
 
-Although 360° video is a form of VR, it does not provide a fully immersive experience to its audience. Like regular videos, the camera’s location is the audience’s position. When the camera is still, the audience is set within the 3D space and therefore unable to modify his or her current location. However, the audience does have three rotations: yaw, pitch, and roll. A graph of the rotations is shown below. 
+Although 360° video is a form of VR, it does not provide a fully immersive experience to its audience. Like regular videos, the camera’s location is the audience’s position. When the camera is still, the audience is set within the 3D space and therefore unable to modify his or her current location. However, the audience does have three rotations: yaw, pitch, and roll. A graph of the three-way rotation is shown below. 
 
 
    <p align="center">
@@ -25,14 +25,14 @@ Although 360° video is a form of VR, it does not provide a fully immersive expe
      
    </p>
    <p align="center">
-      Figure 1: Yaw, Pitch and Roll 
+      Figure 1: Three-way Rotation 
     </p>
    
    
 
 Unlike in immersive VR, the audience’s interaction with scenes or characters is very limited or even nonexistent. Audiences can turn their heads to observe their surroundings, but this won’t change how stories will progress. 
 
-## Guiding the audience through a story  
+## Guiding the Audience Through A Story  
 
 The biggest attraction of 360° video is rotation, but this creates an obstacle for video creators. It’s unreasonable to expect audiences to look in the correct direction at just the right time so that the stories they are viewing can be told fully and be understood just as the creators intended. 
 
@@ -56,7 +56,7 @@ That being said, creators can still have some control over their audiences’ vi
       Figure 3: 360° video with Moving Camera
     </p>
 
-## Multiple cameras cause image distortion problems
+## Monoscopic Camera verus Stereoscopic Camera
 
 Making a great 360° video relies on the creator’s ability to tell a story, and the most important question every creator should ask themselves when they start crafting their story is what type of camera they should use. 
 
@@ -79,6 +79,8 @@ Monoscopic cameras are the most commonly used cameras in 360° video shooting; t
       Figure 5: Stereoscopic camera (Z CAM K1 Pro Cinematic VR180) 
     </p>
    
+
+## Image Distortion Problems
 
 Stitching plays a significant role in 360° video production. This is the step during which all video files captured by the cameras’ lenses are combined and edited so that they can be viewed as a 3D space, providing audiences with the feeling of reality. Some cameras do stitching in real time, whereas others record videos that require post-production work using stitching software. Generally speaking, 360° videos captured by a stereoscopic camera require heavier stitching work than those captured by a monoscopic camera.
 
@@ -104,9 +106,10 @@ When the video files from two lenses that capture the same viewpoint are stitche
   1. [*Stitch Lines*](https://www.coursera.org/lecture/360-vr-video-production/stitch-lines-5vupR)
   2. [*3-DoF vs 6-DoF*](https://www.coursera.org/lecture/360-vr-video-production/3-dof-vs-6-dof-zVm8B)
   3. [*Mono vs. Stereo*](https://www.coursera.org/lecture/360-vr-video-production/mono-vs-stereo-Tw4FO)
-  4. [*Stereoscopic vs. Monoscopic 360° Video for VR experiences*](https://blog.vrdirect.com/stereo-vs-mono-360-video-for-vr)
-  5. [*10 things I wish I knew before shooting 360 video*](https://www.cnet.com/how-to/360-cameras-comparison-video-things-to-know-before-you-buy/)
-  6. [*Stitching 360° Video*](https://studio.knightlab.com/results/storytelling-layers-on-360-video/stitching-360-video/)
+  4. [*Guiding Cues*](https://www.coursera.org/lecture/360-vr-video-production/guiding-cues-PbOvQ)
+  5. [*Stereoscopic vs. Monoscopic 360° Video for VR experiences*](https://blog.vrdirect.com/stereo-vs-mono-360-video-for-vr)
+  6. [*10 things I wish I knew before shooting 360 video*](https://www.cnet.com/how-to/360-cameras-comparison-video-things-to-know-before-you-buy/)
+  7. [*Stitching 360° Video*](https://studio.knightlab.com/results/storytelling-layers-on-360-video/stitching-360-video/)
 
 ## Videos Gif Sources
   1. [*Stephen Colbert's 360 Tour of The Late Show*](https://www.youtube.com/watch?time_continue=34&v=RaD_0g0BFDA)
